# Rocket-Diesel-boilerplate

./: .env  Cargo.toml
insomnia-collection/: Insomnia_2021-09-11.json
migrations/2021-09-11-235524_post/: down.sql  up.sql
src/: main.rs
src/controllers/: mod.rs  post_controller.rs
src/models/: mod.rs  post.rs
src/schemas/: post.rs
src/utils/: connection.rs  date_to_json.rs  mod.rs
